Refactor poll stuff